# smart-health-cms

./: .gitignore  manage.py  pyproject.toml
smart_health_cms/: asgi.py  settings.py  urls.py  wsgi.py
user/: admin.py  models.py  serializers.py  views.py
user/migrations/: 0001_initial.py
